# OMNI-Mesh

./: .gitignore  cli.py
OMNI-Mesh/: .env.example  .gitignore  OMNI-Mesh.md  README.md  feedback.md  pyproject.toml  requirements-ml.txt  requirements.txt
OMNI-Mesh/archive/: README.md
OMNI-Mesh/archive/MFG-Mesh/: .env.example  .gitignore  Makefile  README.md  docker-compose.yml  mfg-mesh.md  requirements.txt
OMNI-Mesh/archive/MFG-Mesh/dbt_mfg_mesh/: dbt_project.yml  profiles.yml
OMNI-Mesh/archive/MFG-Mesh/dbt_mfg_mesh/models/gold/: facility_health.sql  schema.yml
OMNI-Mesh/archive/MFG-Mesh/dbt_mfg_mesh/models/silver/: telemetry_bronze_seed.sql  telemetry_silver.sql
OMNI-Mesh/archive/MFG-Mesh/mfg_mesh/: config.py  security.py
OMNI-Mesh/archive/MFG-Mesh/mfg_mesh/edge/: kafka_transport.py  opc_ua_simulator.py
OMNI-Mesh/archive/MFG-Mesh/mfg_mesh/lakehouse/: schema_manager.py
OMNI-Mesh/archive/MFG-Mesh/mfg_mesh/orchestration/: __init__.py
OMNI-Mesh/archive/MFG-Mesh/mfg_mesh/rag/: agent.py  vector_store.py
OMNI-Mesh/archive/MFG-Mesh/scripts/: run_demo.py
OMNI-Mesh/archive/MFG-Mesh/tests/: conftest.py  test_lakehouse.py  test_security.py
OMNI-Mesh/archive/RoboMesh/: README.md  pyproject.toml  requirements-ml.txt
OMNI-Mesh/archive/RoboMesh/dbt_project/: dbt_project.yml  profiles.yml
OMNI-Mesh/archive/RoboMesh/dbt_project/models/: sources.yml
OMNI-Mesh/archive/RoboMesh/dbt_project/models/gold/: _gold__models.yml  gold_vla_episodes.sql
OMNI-Mesh/archive/RoboMesh/dbt_project/models/silver/: _silver__models.yml  silver_synchronized_trajectories.sql
OMNI-Mesh/archive/RoboMesh/notebooks/: 01_demo_walkthrough.ipynb
OMNI-Mesh/archive/RoboMesh/robomesh/: __init__.py  cli.py  config.py  logging_setup.py
OMNI-Mesh/archive/RoboMesh/robomesh/catalog/: __init__.py  iceberg.py
OMNI-Mesh/archive/RoboMesh/robomesh/closed_loop/: __init__.py  inference_logger.py
OMNI-Mesh/archive/RoboMesh/robomesh/cv/: __init__.py  feature_extractor.py
OMNI-Mesh/archive/RoboMesh/robomesh/generators/: simulation.py
OMNI-Mesh/archive/RoboMesh/robomesh/governance/: contracts.py
OMNI-Mesh/archive/RoboMesh/robomesh/ingestion/: __init__.py
OMNI-Mesh/archive/RoboMesh/robomesh/orchestration/: definitions.py
OMNI-Mesh/archive/RoboMesh/robomesh/semantic/: rag_agent.py  summarizer.py  vector_store.py
OMNI-Mesh/archive/RoboMesh/robomesh/training/: __init__.py  iterable_dataset.py  ray_loader.py
OMNI-Mesh/archive/RoboMesh/robomesh/transformations/: __init__.py  silver.py  vla.py
OMNI-Mesh/archive/RoboMesh/tests/: conftest.py  test_cv.py  test_pipeline.py  test_rag.py  test_vla_pipeline.py
OMNI-Mesh/archive/heal-mesh/: .env.example  .gitignore  Makefile  README.md  conftest.py  docker-compose.yml  pyproject.toml  requirements.txt
OMNI-Mesh/archive/heal-mesh/ai_readiness/rag/: agentic_rag.py
OMNI-Mesh/archive/heal-mesh/docs/: architecture.md
OMNI-Mesh/archive/heal-mesh/domains/clinical/dbt/: profiles.yml
OMNI-Mesh/archive/heal-mesh/domains/clinical/dbt/macros/: phi_mask.sql
OMNI-Mesh/archive/heal-mesh/domains/clinical/ingestion/: README.md
OMNI-Mesh/archive/heal-mesh/domains/commercial/dbt/: profiles.yml
OMNI-Mesh/archive/heal-mesh/domains/commercial/ingestion/: README.md
OMNI-Mesh/archive/heal-mesh/domains/telemetry/ingestion/: README.md
OMNI-Mesh/archive/heal-mesh/finops/queries/: databricks_cost_audit.sql  snowflake_cost_audit.sql
OMNI-Mesh/archive/heal-mesh/governance/: README.md
OMNI-Mesh/archive/heal-mesh/governance/policies/: bigquery_column_security.sql
OMNI-Mesh/archive/heal-mesh/infrastructure/: README.md
OMNI-Mesh/archive/heal-mesh/orchestration/dagster/assets/: mesh_assets.py
OMNI-Mesh/archive/heal-mesh/orchestration/observability/: otel.py
OMNI-Mesh/archive/heal-mesh/scripts/: __init__.py  _config.py  bootstrap_iceberg.py  generate_synthetic_data.py  verify_iceberg_interop.py
OMNI-Mesh/archive/heal-mesh/tests/: test_synthetic_and_iceberg.py
OMNI-Mesh/config/: settings.py
OMNI-Mesh/data_platform/: __init__.py  catalog.py  finops.py  generators.py  governance.py  medallion.py
OMNI-Mesh/data_platform/vla/: closed_loop.py  shards.py
OMNI-Mesh/dbt/models/clinical/: _schema.yml  gold_study_safety.sql  silver_ecrf_observations.sql
OMNI-Mesh/dbt/models/commercial/: _sources.yml  silver_subscription_events.sql
OMNI-Mesh/dbt/models/health_tech/: _schema.yml  _sources.yml  silver_wearable_biometrics.sql
OMNI-Mesh/dbt/models/manufacturing/: _schema.yml  _sources.yml
OMNI-Mesh/dbt/models/robotics/: _schema.yml  silver_robot_signals.sql
OMNI-Mesh/frontend_cockpit/: README.md  vite.config.ts
OMNI-Mesh/frontend_cockpit/src/: index.css  types.ts  vite-env.d.ts
OMNI-Mesh/frontend_cockpit/src/components/: ProfileSwitcher.tsx
OMNI-Mesh/frontend_cockpit/src/config/: profiles.ts
OMNI-Mesh/frontend_cockpit/src/hooks/: useTelemetry.ts
OMNI-Mesh/orchestration/: definitions.py
OMNI-Mesh/streaming_gateway/: __init__.py  gateway.py
OMNI-Mesh/tests/: test_finops.py  test_gateway.py  test_medallion.py  test_policies.py  test_profiles.py  test_vla.py
archive/: README.md
archive/MFG-Mesh/: CITATION.cff  LICENSE  README.md  pyproject.toml  requirements-full.txt
archive/MFG-Mesh/dbt_mfg_mesh/models/silver/: schema.yml
archive/MFG-Mesh/mfg_mesh/: __init__.py  cli.py
archive/MFG-Mesh/mfg_mesh/edge/: __init__.py
archive/MFG-Mesh/mfg_mesh/lakehouse/: __init__.py  catalog.py  ingest.py
archive/MFG-Mesh/mfg_mesh/orchestration/: assets.py
archive/MFG-Mesh/mfg_mesh/quality/: __init__.py  contracts.py
archive/MFG-Mesh/mfg_mesh/rag/: __init__.py  chunker.py
archive/MFG-Mesh/tests/: test_rag.py  test_simulator.py
config/: __init__.py  profiles.py
(+97 files in other folders)
