[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "mfg-mesh"
version = "0.1.0"
description = "High-Fidelity Industrial IT/OT Data Platform & Governance Engine — Iceberg lakehouse + Dagster SLAs + agentic RAG."
readme = "README.md"
requires-python = ">=3.10"
authors = [{ name = "MFG-Mesh Maintainers" }]
license = { text = "Apache-2.0" }
keywords = [
    "data-platform",
    "lakehouse",
    "apache-iceberg",
    "dbt",
    "dagster",
    "duckdb",
    "chromadb",
    "rag",
    "opc-ua",
    "industrial-iot",
    "manufacturing",
    "tesla",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Intended Audience :: Manufacturing",
    "License :: OSI Approved :: Apache Software License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Database",
    "Topic :: Scientific/Engineering",
    "Topic :: Software Development :: Libraries :: Python Modules",
]

[project.urls]
Homepage      = "https://github.com/vgandhi1/MFG-MESH"
Repository    = "https://github.com/vgandhi1/MFG-MESH"
Issues        = "https://github.com/vgandhi1/MFG-MESH/issues"
Documentation = "https://github.com/vgandhi1/MFG-MESH#readme"
dependencies = [
    "pyarrow>=15.0.0",
    "pyiceberg[sql-sqlite,pyarrow]>=0.7.0",
    "duckdb>=1.0.0",
    "pandas>=2.1.0",
    "dagster>=1.7.0",
    "dbt-core>=1.7.0",
    "dbt-duckdb>=1.7.0",
    "chromadb>=0.5.0",
    "sentence-transformers>=2.7.0",
    "pydantic>=2.5.0",
    "python-dotenv>=1.0.0",
    "rich>=13.7.0",
    "typer>=0.12.0",
]

[project.optional-dependencies]
kafka = ["confluent-kafka>=2.4.0"]
dev = ["pytest>=8.0.0", "pytest-cov>=4.1.0"]

[project.scripts]
mfg-mesh = "mfg_mesh.cli:app"

[tool.setuptools.packages.find]
where = ["."]
include = ["mfg_mesh*"]
exclude = ["tests*", "dbt_mfg_mesh*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"
