[project]
name = "heal-mesh"
version = "0.1.0"
description = "HEAL-Mesh: Federated Wearable Health & Subscription Data Mesh - local reference implementation"
readme = "README.md"
requires-python = ">=3.10,<3.13"

dependencies = [
  # ----- Iceberg lakehouse layer (Phase 1) -----
  "pyiceberg[sql-sqlite,pyarrow]>=0.7.1",
  "pyarrow>=15.0.0",
  "duckdb>=1.0.0",
  "pandas>=2.1.0",
  "numpy>=1.26.0",

  # ----- dbt medallion layer (Phase 2) -----
  "dbt-core>=1.8.0",
  "dbt-duckdb>=1.8.0",

  # ----- Governance / crypto (Phase 3) -----
  "cryptography>=42.0.0",

  # ----- AI Readiness (Phase 4) -----
  "langchain>=0.2.0",
  "langchain-community>=0.2.0",
  "langchain-text-splitters>=0.2.0",
  "sentence-transformers>=2.7.0",
  "chromadb>=0.5.0",

  # ----- Orchestration & observability (Phase 5) -----
  "dagster>=1.7.0",
  "dagster-webserver>=1.7.0",
  "dagster-duckdb>=0.23.0",
  "opentelemetry-api>=1.25.0",
  "opentelemetry-sdk>=1.25.0",

  # ----- Utility -----
  "faker>=25.0.0",
  "python-dotenv>=1.0.0",
  "rich>=13.7.0",
  "typer>=0.12.0",
]

[project.scripts]
heal-mesh = "heal_mesh.scripts.cli:app"

[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = []
